add certificate for bd

--- a/backpurplehack/Dockerfile
+++ b/backpurplehack/Dockerfile
@@ -10,6 +10,11 @@ COPY package.json package-lock.json ./
 # устанавливаем указанные зависимости NPM на этапе установки образа
 RUN npm install
 
+RUN mkdir -p /root/.postgresql && \
+    wget "https://storage.yandexcloud.net/cloud-certs/CA.pem" \
+    --output-document /root/.postgresql/root.crt && \
+    chmod 0600 /root/.postgresql/root.crt
+
 # после установки копируем все файлы проекта в корневую директорию
 COPY . ./
 
