--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,17 @@
 version: '3'
 services:
 
-  postgres:
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    image: postgres
-    environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "1"
-      POSTGRES_DB: "admin_avito"
-      POSTGRES_HOST: "localhost"
-    volumes:
-      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
-    ports:
-      - "5432:5432"
-
   back:
     restart: always
     environment:
       CLIENT: "http://localhost:5173"
       PORT: "5000"
-      DB_PASSWORD: "1"
-      DB_HOST: "postgres"
-      DB_PORT: "5432"
-      DB_USER: "postgres"
-      DB_NAME: "admin_avito"
-      COST_SERVER: "http://localhost:5001"
+      DB_PASSWORD: "securepassword"
+      DB_HOST: "rc1a-8cgm2ii401pwhc7x.mdb.yandexcloud.net"
+      DB_PORT: "6432"
+      DB_USER: "avito"
+      DB_NAME: "matrix"
+      COST_SERVER: "http://10.2.0.10:5001"
     build:
         context: ./backpurplehack
         dockerfile: Dockerfile
@@ -37,8 +20,6 @@ services:
     depends_on:
       front:
         condition: service_started
-      postgres:
-        condition: service_healthy
 
   front:
     environment:
@@ -48,19 +29,16 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5173:5173"
-    depends_on:
-      postgres:
-        condition: service_healthy
 
   costs:
     environment:
       ADMIN_SERVER: "http://localhost:5000"
       PORT: "5001"
-      DB_PASSWORD: "1"
-      DB_HOST: "postgres"
-      DB_PORT: "5432"
-      DB_USER: "postgres"
-      DB_NAME: "admin_avito"
+      DB_PASSWORD: "securepassword"
+      DB_HOST: "rc1a-8cgm2ii401pwhc7x.mdb.yandexcloud.net"
+      DB_PORT: "6432"
+      DB_USER: "avito"
+      DB_NAME: "matrix"
     build:
       context: ./serviceCost
       dockerfile: Dockerfile
@@ -71,5 +49,3 @@ services:
         condition: service_started
       front:
         condition: service_started
-      postgres:
-        condition: service_healthy
